# subways

./: process_subways.py  pyproject.toml  subway_io.py  subway_structure.py
docs/: index.md
docs/rapid/: abuja.geojson  abuja.yaml  adana.geojson  adana.yaml  addis_ababa.geojson  addis_ababa.yaml  ahmedabad.geojson  ahmedabad.yaml  algeria.html  algiers.geojson  algiers.yaml  almaty.geojson  almaty.yaml  amsterdam.geojson  amsterdam.yaml  ankara.geojson  ankara.yaml  argentina.html  armenia.html  athens.geojson  athens.yaml  atlanta.geojson  atlanta.yaml  australia.html  austria.html  azerbaijan.html  baixada_santista.geojson  baixada_santista.yaml  baku.geojson  baku.yaml  baltimore.geojson  baltimore.yaml  bangalore.geojson  bangalore.yaml  bangkok.geojson  bangkok.yaml  bangkok_-_airport.geojson  bangkok_-_airport.yaml  bangkok_-_skytrain.geojson  bangkok_-_skytrain.yaml  (+601 more)
docs/rapid/js/: metro.js
processors/: _common.py  mapsme.py
scripts/: process_subways.py  process_subways.sh
structure/: consts.py  error_collector.py  geom_utils.py  osm_element.py  station.py
subways/: __init__.py  http_utils.py  overpass.py  validation.py
subways/processors/: mapsme.py
subways/tests/: test_get_cities_info.py  test_overpass.py  test_prepare_cities.py
tests/: test_projection.py  test_station.py
tools/make_poly/: make_all_metro_poly.py
tools/make_poly/tests/: test_make_all_metro_poly.py
tools/stop_areas/: make_stop_areas.py  make_tram_areas.py
tools/v2h/: v2h_templates.py  validation_to_html.py
